[package]
name = "mezmo_client"
version = "0.2.1"
authors = ["OpenAPI Generator team and contributors"]
description = "*REST API to send log data, export data and manage configuration*  To utilize the inline testing functionality here, please go into your Mezmo account and add the following address to your CORS Origins page: `https://docs.mezmo.com`. "
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
rsb_derive = "0.5.1"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
